# thriftRPC_lab

./: README.md
cpp/: CMakeLists.txt  client.cpp  makefile
cpp/gen-cpp/: Serv.cpp  Serv.h  Serv_server.skeleton.cpp  student_constants.cpp  student_constants.h  student_types.cpp  student_types.h
go/: student.thrift
go/gen-go/student/: GoUnusedProtection__.go  student-consts.go  student.go
go/gen-go/student/serv-remote/: serv-remote.go
